Changelog (English)
===================

1.3.0
Added support Arch Linux installation
Added automatic calculation of image size (90% of free space, but not more than 4095 MB)
Interface improvements

1.2.9
Bugfix: sudo, upstart, gnome-session, XKL_XMODMAP_DISABLE
Added support ext3 file system
Improved preferences organization
Improved automatic detection of file system
Optimize of making disk image file

1.2.8
Bugfix: problem installing BusyBox on some devices (error updating the operating environment)
Added support installation in directory
Added checking mount points before installation
Rebuilding image file at change the size
Improved custom mounting

1.2.7
Bugfix: incorrect startup GNOME session on Ubuntu
Added support X Window System (startup GUI over X server)
Added automatic DNS configuration
Added support Unity desktop environment

1.2.6
Bugfix: incorrect profile management
Added support Ubuntu installation
Added information of active Linux system in SysInfo
Improved wake lock

1.2.5
Added support for profiles
Added select file system
Added separate localization settings
Change TWM to XTerm

1.2.4
Added information of available mount points and partitions in SysInfo
Added ability to select and copy text in the main window (Android 3+)

1.2.3
Added themes support (dark and light)

1.2.2
Improved resources release function
Improved auto-scrolling

1.2.1
Bugfix: error set user password on third-party images
Default user name changed to android

1.2.0
Improved function of the system configuration for third-party images

1.1.9
Added ability to select a desktop environment (TWM, LXDE, XFCE, GNOME, KDE)
Added support for startup as root
Added check for reserved usernames
Added ability to change DNS server

1.1.8
Support mounting custom partitions from /dev (e.g. /dev/block/sda1)
Interface improvements

1.1.7
Support for architectures ARMv5TE and above
Added feature mounting custom partitions
Added feature to run multiple custom scripts

1.1.6